--- a/lab/lab03/SimpleMyDot/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab03/SimpleMyDot/app/src/main/res/layout/activity_main.xml
@@ -31,27 +31,36 @@
         android:layout_height="wrap_content"
         android:text="@string/random_dot"
         android:onClick="onRandomDot"
-        android:layout_marginEnd="28dp"
         app:layout_constraintRight_toLeftOf="@+id/button"
-        android:layout_marginRight="39dp"
-        app:layout_constraintTop_toTopOf="@+id/button"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintVertical_bias="1.0" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/clear_dot"
-        android:layout_marginEnd="38dp"
-        android:layout_marginRight="38dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:onClick="onClearDot"
-        app:layout_constraintTop_toBottomOf="@+id/dotView" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/randombutton"
+        tools:layout_constraintBaseline_creator="1"
+        android:layout_marginRight="8dp" />
+
+    <Button
+        android:id="@+id/undoButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/undo_dot"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/randombutton"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:onClick="onUndoDot"
+        android:layout_marginLeft="8dp" />
 
 </android.support.constraint.ConstraintLayout>
