--- a/lab/lab07/LazyInstagram/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab07/LazyInstagram/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,23 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
-        android:layout_width="394dp"
-        android:layout_height="491dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="355dp"
+        android:layout_height="355dp"
+        android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="96dp" />
+        android:layout_marginTop="140dp" />
+
+    <Button
+        android:id="@+id/logout_btn"
+        android:layout_width="78dp"
+        android:layout_height="44dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="6dp"
+        android:onClick="onLogout"
+        android:text="logout"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </android.support.constraint.ConstraintLayout>
 
