class post model + display

--- a/lab/lab07/LazyInstagram/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab07/LazyInstagram/app/src/main/res/layout/activity_main.xml
@@ -33,23 +33,23 @@
         android:id="@+id/textFollowing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Following\n50000"
-        android:layout_marginStart="37dp"
-        app:layout_constraintLeft_toRightOf="@+id/textPost"
         android:layout_marginLeft="37dp"
+        android:layout_marginStart="37dp"
         android:layout_marginTop="8dp"
+        android:text="Following\n10"
+        app:layout_constraintLeft_toRightOf="@+id/textPost"
         app:layout_constraintTop_toBottomOf="@+id/textName" />
 
     <TextView
         android:id="@+id/textFollower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Follower\n100"
-        app:layout_constraintLeft_toRightOf="@+id/textFollowing"
         android:layout_marginLeft="39dp"
+        android:layout_marginStart="39dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textName"
-        android:layout_marginStart="39dp" />
+        android:text="Follower\n10"
+        app:layout_constraintLeft_toRightOf="@+id/textFollowing"
+        app:layout_constraintTop_toBottomOf="@+id/textName" />
 
     <TextView
         android:id="@+id/textBio"
