--- a/lab/lab07/LazyInstagram/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab07/LazyInstagram/app/src/main/res/layout/activity_main.xml
@@ -75,12 +75,18 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
-        android:layout_width="355dp"
-        android:layout_height="355dp"
-        android:layout_marginLeft="15dp"
+        android:layout_width="375dp"
+        android:layout_height="435dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="7dp"
+        android:layout_weight="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="140dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logout_btn"
+        tools:layout_editor_absoluteX="9dp"/>
 
     <Button
         android:id="@+id/logout_btn"
@@ -93,5 +99,17 @@
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/chang_btn"
+        android:layout_width="114dp"
+        android:layout_height="33dp"
+        android:layout_marginLeft="266dp"
+        android:layout_marginTop="2dp"
+        android:onClick="onChange"
+        android:text="Chang layout"
+        android:textSize="9dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
 
