--- a/lab/lab07/LazyInstagram/app/src/main/res/layout/post_item.xml
+++ b/lab/lab07/LazyInstagram/app/src/main/res/layout/post_item.xml
@@ -1,11 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:scaleType="centerCrop"
+        android:padding="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/frame"
+        android:layout_width="468dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="386dp"
+        android:background="#cccccc"
+
+        app:layout_constraintBottom_toBottomOf="@+id/image"
+        tools:layout_editor_absoluteX="-29dp" />
+
+    <TextView
+        android:id="@+id/comment"
+        android:layout_width="48dp"
+        android:layout_height="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+        android:text="comment"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_dark"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/frame"
+        app:layout_constraintLeft_toRightOf="@+id/like"
+        app:layout_constraintTop_toTopOf="@+id/frame"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/like"
+        android:layout_width="30dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Like"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_dark"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/frame"
+        app:layout_constraintLeft_toRightOf="@+id/likelogo"
+        app:layout_constraintTop_toTopOf="@+id/frame"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/likelogo"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/frame"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/frame"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@mipmap/like"
+        tools:layout_editor_absoluteY="425dp" />
+
+    <ImageView
+        android:id="@+id/commentlogo"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:srcCompat="@mipmap/comment"
+        app:layout_constraintLeft_toRightOf="@+id/likelogo"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintTop_toTopOf="@+id/frame"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/frame"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
