--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_add.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_add.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.lab09.supanat.moneyflow.AddActivity">
+    tools:context="kmitl.lab09.supanat.moneyflow.AddActivity"
+    >
 
     <TextView
         android:id="@+id/textType"
