--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.lab09.supanat.moneyflow.MainActivity">
+    tools:context="kmitl.lab09.supanat.moneyflow.MainActivity"
+    >
 
     <TextView
         android:id="@+id/textCurrently"
@@ -25,17 +26,30 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textCurrently"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 
     <Button
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="161dp"
         android:onClick="onAdd"
         android:text="ADD"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/listStatus" />
+        android:layout_marginTop="-1dp"
+        app:layout_constraintTop_toBottomOf="@+id/listStatus"
+        android:layout_marginLeft="161dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/buttonUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="58dp"
+        android:layout_marginTop="-9dp"
+        android:onClick="onUpdate"
+        android:text="update"
+        app:layout_constraintLeft_toRightOf="@+id/buttonAdd"
+        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />
 
 </android.support.constraint.ConstraintLayout>
