--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
@@ -34,22 +34,13 @@
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="161dp"
+        android:layout_marginTop="-1dp"
+        android:background="@color/colorPrimary"
         android:onClick="onAdd"
         android:text="ADD"
-        android:layout_marginTop="-1dp"
-        app:layout_constraintTop_toBottomOf="@+id/listStatus"
-        android:layout_marginLeft="161dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Button
-        android:id="@+id/buttonUpdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="58dp"
-        android:layout_marginTop="-9dp"
-        android:onClick="onUpdate"
-        android:text="update"
-        app:layout_constraintLeft_toRightOf="@+id/buttonAdd"
-        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />
+        android:textColor="@android:color/background_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listStatus" />
 
 </android.support.constraint.ConstraintLayout>
