decorate type button homeworklab09

--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_add.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_add.xml
@@ -25,7 +25,7 @@
         android:layout_height="48dp"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="35dp"
-        android:background="@android:color/black"
+        android:background="#333333"
         android:onClick="onIncome"
         android:text="รายรับ"
         android:textColor="@android:color/background_light"
@@ -38,7 +38,7 @@
         android:layout_height="48dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="0dp"
-        android:background="@android:color/black"
+        android:background="#333333"
         android:onClick="onOutcome"
         android:text="รายจ่าย"
         android:textColor="@android:color/background_light"
