--- a/lab/lab09/moneyflow/app/src/main/res/values/colors.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#771C00</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="gray">#333333</color>
 </resources>
