add function delete all

--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_add.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_add.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="35dp"
-        android:text="ประเภท"
+        android:text="Type"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginTop="35dp"
         android:background="#333333"
         android:onClick="onIncome"
-        android:text="รายรับ"
+        android:text="Income"
         android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toLeftOf="@+id/textType"
         app:layout_constraintTop_toBottomOf="@+id/textType" />
@@ -40,7 +40,7 @@
         android:layout_marginTop="0dp"
         android:background="#333333"
         android:onClick="onOutcome"
-        android:text="รายจ่าย"
+        android:text="expense"
         android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toRightOf="@+id/buttonIncome"
         app:layout_constraintTop_toTopOf="@+id/buttonIncome" />
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="35dp"
-        android:text="รายการ"
+        android:text="Item"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/buttonIncome"
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="35dp"
-        android:text="จำนวนเงิน"
+        android:text="Amount"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/editText"
@@ -99,7 +99,7 @@
         android:layout_marginTop="35dp"
         android:background="@color/colorPrimary"
         android:onClick="onSave"
-        android:text="บันทึก"
+        android:text="Save"
         android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toLeftOf="@+id/editText2"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
