--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/textCurrently"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="500,000,000"
+        android:text="0"
+        android:textColor="#6aa84f"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,5 +43,18 @@
         android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listStatus" />
+
+    <Button
+        android:id="@+id/buttonDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-1dp"
+        android:background="@color/colorPrimary"
+        android:onClick="onDelete"
+        android:text="DELETE ALL"
+        android:textColor="@android:color/holo_red_dark"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />
 
 </android.support.constraint.ConstraintLayout>
