--- a/lab/lab09/moneyflow/app/src/main/res/values/colors.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#333333</color>
+    <color name="green">#6aa84f</color>
+    <color name="red">#cc0000</color>
+    <color name="yellow">#f1c232</color>
 </resources>
